# dat205-project

./: .gitignore  CMakeLists.txt
external_src/glm/: CMakeLists.txt
external_src/imgui/: CMakeLists.txt
external_src/imgui-1.51/: CMakeLists.txt
labhelper/: CMakeLists.txt  Model.cpp
project/: CMakeLists.txt  main.cpp  vk_main.cpp
project/glsl_shaders/: shading.frag
project/vk_components/: scene.cpp  scene.h  scene_uniforms.h  util.h  vk_context.cpp  vk_context.h  vk_model.cpp  vk_model.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vk_swapchain.cpp  vk_swapchain.h
project/vk_components/pipelines/: background_pipeline.cpp  background_pipeline.h  shading_pipeline.cpp  shading_pipeline.h  simple_pipeline.cpp  simple_pipeline.h
project/vk_shaders/: background.frag  background.vert  shading.frag  shading.vert  simple.frag  simple.vert
